Bug 95963 - Crash: Opening Impress
Summary: Crash: Opening Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Julien Nabet
URL:
Whiteboard: target:5.1.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2015-11-21 00:45 UTC by Julien Nabet
Modified: 2016-10-25 19:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (8.85 KB, text/plain)
2015-11-21 00:45 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2015-11-21 00:45:44 UTC
Created attachment 120692 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I had a crash just by opening Impress.
Comment 1 Julien Nabet 2015-11-21 00:46:42 UTC
Michael: related with http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1adb498bb0a5ff091c9d1d82332a4c43c57979b but perhaps this commit just revealed a problem?
Comment 2 Julien Nabet 2015-11-21 14:29:20 UTC
More precisely, it's not at the opening but when you click on a part of slide "Click to add Title" or "Click to add Text".
Comment 3 Julien Nabet 2015-11-21 17:01:19 UTC
Some additional log
(std::cerr << "rItem: " << typeid(rItem).name() << " *pNewItem: " << typeid(*pNewItem).name() << "\n";)
gives:

rItem: 12SdrMoveXItem *pNewItem: 13SdrMetricItem
Comment 4 Julien Nabet 2015-11-21 17:32:44 UTC
I submitted this patch to review: https://gerrit.libreoffice.org/#/c/20107/

With it, I could click again on different parts of the slide.
Comment 5 Commit Notification 2015-11-21 19:23:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ef899470fe85915b7ea3d22b29161977689c129

tdf#95963: Add required Clone functions for Impress

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.