tdf#95963: Add required Clone functions for Impress

See https://bugs.documentfoundation.org/show_bug.cgi?id=95963
for more details

Change-Id: Ia3fbf4db8d5b968e86007f7e9d6694d5e096f214