svx/inc/sxreoitm.hxx
@@ -28,6 +28,10 @@ public:
     SdrResizeXOneItem(): SdrFractionItem(SDRATTR_RESIZEXONE,Fraction(1,1)) {}
     SdrResizeXOneItem(const Fraction& rFact): SdrFractionItem(SDRATTR_RESIZEXONE,rFact) {}
     SdrResizeXOneItem(SvStream& rIn): SdrFractionItem(SDRATTR_RESIZEXONE,rIn)    {}
+    SfxPoolItem* Clone(SfxItemPool*) const override
+    {
+        return new SdrResizeXOneItem(*this);
+    }
 };
 
 class SdrResizeYOneItem: public SdrFractionItem {
@@ -35,6 +39,10 @@ public:
     SdrResizeYOneItem(): SdrFractionItem(SDRATTR_RESIZEYONE,Fraction(1,1)) {}
     SdrResizeYOneItem(const Fraction& rFact): SdrFractionItem(SDRATTR_RESIZEYONE,rFact) {}
     SdrResizeYOneItem(SvStream& rIn): SdrFractionItem(SDRATTR_RESIZEYONE,rIn)    {}
+    SfxPoolItem* Clone(SfxItemPool*) const override
+    {
+        return new SdrResizeYOneItem(*this);
+    }
 };
 
 #endif
