svx/inc/sxrooitm.hxx
@@ -26,6 +26,10 @@ class SdrRotateOneItem: public SdrAngleItem {
 public:
     SdrRotateOneItem(long nAngle=0): SdrAngleItem(SDRATTR_ROTATEONE,nAngle) {}
     SdrRotateOneItem(SvStream& rIn): SdrAngleItem(SDRATTR_ROTATEONE,rIn)    {}
+    SfxPoolItem* Clone(SfxItemPool*) const override
+    {
+        return new SdrRotateOneItem(*this);
+    }
 };
 
 #endif
